remove reduntant profiles, obsolete plugins, etc
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>