@@ -135,8 +135,8 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/mods/</outputDirectory>
-                            <excludeArtifactIds>jmockit,junit</excludeArtifactIds>
+                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
+                            <excludeArtifactIds>jmockit</excludeArtifactIds>
                         </configuration>
                     </execution>
                 </executions>
@@ -151,9 +151,11 @@
                         <jaxb-api.version>${jaxb-api.version}</jaxb-api.version>
                     </systemPropertyVariables>
                     <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
+                    <reuseForks>true</reuseForks>
                     <argLine>
-                     -Djdk.attach.allowAttachSelf
+                        --add-exports com.sun.tools.xjc/com.sun.tools.xjc.outline=ALL-UNNAMED
+                        --add-opens com.sun.tools.xjc/com.sun.tools.xjc.addon.code_injector=ALL-UNNAMED
+                        -Djdk.attach.allowAttachSelf
                     </argLine>
                 </configuration>
             </plugin>
@@ -220,21 +222,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
-                            <excludeArtifactIds>jmockit</excludeArtifactIds>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
@@ -294,7 +281,6 @@
                         <id>update-source-jar</id>
                         <phase>verify</phase>
                         <configuration>
-                            <skip>${skipSources}</skip>
                             <tasks>
                                 <jar destfile="${project.build.directory}/jaxb-xjc-${project.version}-sources.jar" update="true">
                                     <zipfileset prefix="META-INF/versions" dir="${mrjar.sourceDirectory}"/>
